--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -42,7 +42,7 @@
             <br>
             {% block content %}
 
-                
+                replace by conttents
 
             {% endblock content %}
          </div>
