--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -4,5 +4,41 @@
     <h3>store</h3>
 
 
+    <div class="row">
+    <div class = 'col-lg-4'>
+        <img class="thumbnail"  src = "{%  static 'images/placeholder.png' %}">
+        <div class="box-element product"></div>
+        <h6><strong>Product</strong></h6>
+        <hr>
+        <button class = 'btn btn-outline-secondary add-btn'>Add to Cart</button>
+        <a class = 'btn btn-outline-success' href="">View</a>
+        <h4 style="display: inline-block; float:right" >$20</h4>
+    </div>
+
+    <div class = 'col-lg-4'>
+        <img class = 'thumbnail'  src = "{%  static 'images/placeholder.png' %}">
+        <div class="box-element product"></div>
+          <h6><strong>Product</strong></h6>
+        <hr>
+        <button class = 'btn btn-outline-secondary add-btn'>Add to Cart</button>
+        <a class = 'btn btn-outline-success' href="">View</a>
+        <h4 style="display: inline-block; float:right" >$20</h4>
+    </div>
+
+    <div class = 'col-lg-4'>
+        <img  class = 'thumbnail' src = "{%  static 'images/placeholder.png' %}">
+        <div class="box-element product"></div>
+          <h6><strong>Product</strong></h6>
+        <hr>
+        <button class = 'btn btn-outline-secondary add-btn'>Add to Cart</button>
+        <a class = 'btn btn-outline-success' href="">View</a>
+        <h4 style="display: inline-block; float:right" >$20</h4>
+    </div>
+
+
+
+
+    </div>
+
 
 {%  endblock %}
