--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -5,37 +5,23 @@
 
 
     <div class="row">
+
+    {%  for product in products %}
+
+
     <div class = 'col-lg-4'>
         <img class="thumbnail"  src = "{%  static 'images/placeholder.png' %}">
         <div class="box-element product"></div>
-        <h6><strong>Product</strong></h6>
+        <h6><strong>{{ product.name }}</strong></h6>
         <hr>
         <button class = 'btn btn-outline-secondary add-btn'>Add to Cart</button>
         <a class = 'btn btn-outline-success' href="">View</a>
-        <h4 style="display: inline-block; float:right" >$20</h4>
-    </div>
-
-    <div class = 'col-lg-4'>
-        <img class = 'thumbnail'  src = "{%  static 'images/placeholder.png' %}">
-        <div class="box-element product"></div>
-          <h6><strong>Product</strong></h6>
-        <hr>
-        <button class = 'btn btn-outline-secondary add-btn'>Add to Cart</button>
-        <a class = 'btn btn-outline-success' href="">View</a>
-        <h4 style="display: inline-block; float:right" >$20</h4>
-    </div>
-
-    <div class = 'col-lg-4'>
-        <img  class = 'thumbnail' src = "{%  static 'images/placeholder.png' %}">
-        <div class="box-element product"></div>
-          <h6><strong>Product</strong></h6>
-        <hr>
-        <button class = 'btn btn-outline-secondary add-btn'>Add to Cart</button>
-        <a class = 'btn btn-outline-success' href="">View</a>
-        <h4 style="display: inline-block; float:right" >$20</h4>
+        <h4 style="display: inline-block; float:right" >{{ product.price |floatformat:2 }}</h4>
     </div>
 
 
+
+{% endfor %}
 
 
     </div>
