--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -10,7 +10,7 @@
 
 
     <div class = 'col-lg-4'>
-        <img class="thumbnail"  src = "{%  static 'images/placeholder.png' %}">
+        <img class="thumbnail"  src = "{{product.image.url}}">
         <div class="box-element product"></div>
         <h6><strong>{{ product.name }}</strong></h6>
         <hr>
