--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -14,8 +14,10 @@
         <div class="box-element product"></div>
         <h6><strong>{{ product.name }}</strong></h6>
         <hr>
-        <button class = 'btn btn-outline-secondary add-btn'>Add to Cart</button>
-        <a class = 'btn btn-outline-success' href="">View</a>
+        <button data-product = "{{product.id}}" data-action = "add" class = "btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
+{#        Add class update-cart; cutomer attibute in html, data-product and data action#}
+
+        <a class = 'btn btn-outline-success' href="#">View</a>
         <h4 style="display: inline-block; float:right" >{{ product.price |floatformat:2 }}</h4>
     </div>
 
