--- a/static/css/main.css
+++ b/static/css/main.css
@@ -38,7 +38,7 @@ h1,h2,h3,h4,h5,h6{
 #cart-total{
 	display: block;
 	text-align: center;
-	color:#fff;
+	color:white;
 	background-color: red;
 	width: 20px;
 	height: 25px;
