--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -43,6 +43,7 @@
 			<br>
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
+                <button id = 'make-payment'>Make Payment</button>
 			</div>
 
 		</div>
@@ -72,12 +73,49 @@
 
 {#   to check is the order needs to be ship. If all digital, hide the shipping form#}
     <script>
+        {#  check is shipping is needed  #}
     var shipping = '{{ order.shipping }}'
     console.log('check shipping:',shipping)
 
     if (shipping == 'False'){
         document.getElementById('shipping-info').innerHTML = ''
     }
+    var user = '{{ request.user }}'
+    if (user =! 'AnonymousUser'){
+        document.getElementById('user-info').innerHTML = ''
+    }
+
+
+
+
+
+
+
+
+
+    if (shipping == 'False' && user =! 'AnonymousUser') {
+
+        {# show/hide payment form #}
+        var form = document.getElementById('form')
+        form.addEventListener('submit', function (e) {
+                e.preventDefault()
+                {#  prevent form to preform (??) #}
+                console.log('Form submitted')
+                {# hide payoption button and show payment form #}
+                document.getElementById('form-button').classList.add('hidden');
+                document.getElementById('payment-info').classList.remove('hidden');
+            }
+        )
+
+        document.getElementById('make-payment').addEventListener('click', function (e) {
+            submitFormData()
+        })
+
+        function submitFormData() {
+            console.log('payment button clincked')
+        }
+    }
+
     </script>
 
 
