--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,7 +1,7 @@
 {% extends 'store/main.html' %}
 {%  load static %}
 {% block content %}
-    <h3>store</h3>
+    <h3>Jellycat Store</h3>
 
 
     <div class="row">
