--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -34,7 +34,7 @@
 
                 {%  for item in items %}
 				<div class="cart-row">
-					<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}} %}"></div>
+					<div style="flex:2"><img class="row-image" src="{{item.product.image.url}} "></div>
 					<div style="flex:2"><p>{{ item.product.name}}</p></div>
 					<div style="flex:1"><p>${{item.product.price |floatformat:2}}</p></div>
 					<div style="flex:1">
