--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -40,7 +40,7 @@ const csrftoken = getToken('csrftoken');
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="{% url 'store' %}">Ecom</a>
+	  <a class="navbar-brand" href="{% url 'store' %}">Shopping Web</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -48,7 +48,7 @@ const csrftoken = getToken('csrftoken');
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active">
-	        <a class="nav-link" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="{% url 'store' %}">Store Main Page <span class="sr-only">(current)</span></a>
 	      </li>
 
 	    </ul>
